--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -46,7 +46,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="/bai-viet">Bài viết</a>
+                                <a class="nav-link click-scroll" href="/bai-viet">tuyến xe</a>
                             </li>
     
                             <li class="nav-item">
