--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -28,7 +28,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <i class="bi-back"></i>
-                        <span>Quan</span>
+                        <span>Phát-Quân-Phong</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -111,7 +111,10 @@
                     <div class="col-lg-3 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="index.html">
                             <i class="bi-back"></i>
-                            <span>Quan</span>
+                            <span><br>
+                                  -Phát <br>
+                                  -Quân<br>
+                                  -Phong</span>
                         </a>
                     </div>
 
