--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -119,39 +119,37 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-6">
-                        <h6 class="site-footer-title mb-3">Resources</h6>
+                        <h6 class="site-footer-title mb-3">tên thành viên</h6>
 
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Home</a>
+                                <a class="site-footer-link">Nguyễn Đức Phát</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">How it works</a>
+                                <a  class="site-footer-link">Phạm Minh Quân</a>
                             </li>
 
                             <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">FAQs</a>
-                            </li>
-
-                            <li class="site-footer-link-item">
-                                <a href="#" class="site-footer-link">Contact</a>
+                                <a  class="site-footer-link">Trương Văn Quốc Phong</a>
                             </li>
                         </ul>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-6 mb-4 mb-lg-0">
-                        <h6 class="site-footer-title mb-3">Information</h6>
+                        <h6 class="site-footer-title mb-3">thông tin liên hệ</h6>
 
                         <p class="text-white d-flex mb-1">
                             <a href="tel: 305-240-9671" class="site-footer-link">
-                                305-240-9671
+                                0382627770
                             </a>
                         </p>
 
                         <p class="text-white d-flex">
                             <a href="mailto:info@company.com" class="site-footer-link">
-                                info@company.com
+                                1150080152@sv.hcmunre.edu.vn
+                                1150080153@sv.hcmunre.edu.vn
+                                1150080154@sv.hcmunre.edu.vn
                             </a>
                         </p>
                     </div>
@@ -170,7 +168,7 @@
                             </ul>
                         </div>
 
-                        <p class="copyright-text mt-lg-5 mt-4">Copyright © 2048 Topic Listing Center. All rights reserved.
+                        <p class="copyright-text mt-lg-5 mt-4">Copyright © 2025 DEV phát-quân-phong.
                         <br><br>Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
                         
                     </div>
