--- a/myproject/posts/templates/posts/post_list.html
+++ b/myproject/posts/templates/posts/post_list.html
@@ -7,7 +7,7 @@
         <div class="row">
 
             <div class="col-lg-12 col-12 text-center">
-                <h3 class="mb-4">Danh sách bài viết</h3>
+                <h3 class="mb-4">Danh sách tuyến xe</h3>
             </div>
             
             {% for post in posts %}
