--- a/myproject/maps/templates/simple-map.html
+++ b/myproject/maps/templates/simple-map.html
@@ -2,9 +2,13 @@
 {% load static %}
 
 {% block map %}
-  <link rel="stylesheet" href="{% static 'leaflet/leaflet.css' %}">
-  <link rel="stylesheet" href="{% static 'css/map.css' %}">
-  <script src="{% static 'leaflet/leaflet.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'leaflet/leaflet.css' %}">
+    <link rel="stylesheet" href="{% static 'css/map.css' %}">
+    <script src="{% static 'leaflet/leaflet.js' %}"></script>
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css"/>
+    <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
 {% endblock %}
 
 {% block content %}
