thêm định vị và chỉ đường

--- a/myproject/maps/templates/simple-map.html
+++ b/myproject/maps/templates/simple-map.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="{% static 'leaflet/leaflet.css' %}">
     <link rel="stylesheet" href="{% static 'css/map.css' %}">
     <script src="{% static 'leaflet/leaflet.js' %}"></script>
-    <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css"/>
     <script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.fullscreen/Control.FullScreen.css"/>
+    <script src="https://unpkg.com/leaflet.fullscreen/Control.FullScreen.js"></script>
 {% endblock %}
 
 {% block content %}
