thêm định vị và chỉ đường

--- a/myproject/maps/templates/simple-map.html
+++ b/myproject/maps/templates/simple-map.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h3 class="mb-4">Bản đồ cơ bản</h3>
+        <h3 class="mb-4">Bản đồ vị trí các trạm xe buýt</h3>
       </div>
       <div class="custom-block bg-white shadow-lg mb-5" style="height:770px">
         <div id="map"></div>
