--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -28,7 +28,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
                         <i class="bi-back"></i>
-                        <span>Phát-Quân-Phong</span>
+                        <span>BUS</span>
                     </a>
 
                     <div class="d-lg-none ms-auto me-4">
@@ -66,20 +66,6 @@
                 </div>
             </nav>
             
-
-            <section class="hero-section d-flex justify-content-center align-items-center">
-                <div class="container">
-                    <div class="row">
-
-                        <div class="col-lg-8 col-12 mx-auto">
-                            <h1 class="text-white text-center">Chào mừng</h1>
-                        </div>
-
-                    </div>
-                </div>
-            </section>
-
-            
             {% block content %}
 
             {% endblock %}
@@ -97,10 +83,7 @@
                     <div class="col-lg-3 col-12 mb-4 pb-2">
                         <a class="navbar-brand mb-2" href="index.html">
                             <i class="bi-back"></i>
-                            <span><br>
-                                  -Phát <br>
-                                  -Quân<br>
-                                  -Phong</span>
+                            <span>BUS</span>
                         </a>
                     </div>
 
@@ -134,25 +117,21 @@
                         <p class="text-white d-flex">
                             <a href="mailto:info@company.com" class="site-footer-link">
                                 1150080152@sv.hcmunre.edu.vn
+                            </a>
+                        </p>
+                        <p class="text-white d-flex">
+                            <a href="mailto:info@company.com" class="site-footer-link">
                                 1150080153@sv.hcmunre.edu.vn
+                            </a>
+                        </p>
+                        <p class="text-white d-flex">
+                            <a href="mailto:info@company.com" class="site-footer-link">
                                 1150080154@sv.hcmunre.edu.vn
                             </a>
                         </p>
                     </div>
 
                     <div class="col-lg-3 col-md-4 col-12 mt-4 mt-lg-0 ms-auto">
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            English</button>
-
-                            <ul class="dropdown-menu">
-                                <li><button class="dropdown-item" type="button">Thai</button></li>
-
-                                <li><button class="dropdown-item" type="button">Myanmar</button></li>
-
-                                <li><button class="dropdown-item" type="button">Arabic</button></li>
-                            </ul>
-                        </div>
 
                         <p class="copyright-text mt-lg-5 mt-4">Copyright © 2025 DEV phát-quân-phong.
                         <br><br>Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
