--- a/myproject/static/css/templatemo-topic-listing.css
+++ b/myproject/static/css/templatemo-topic-listing.css
@@ -288,7 +288,7 @@ strong {
 }
 
 .navbar {
-  background: transparent;
+  background-color: #80d0c7;
   border-bottom: 1px solid rgba(128, 208, 199, 0.35);
   z-index: 9;
 }
