--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -26,7 +26,7 @@
 
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="/">
                         <i class="bi-back"></i>
                         <span>BUS</span>
                     </a>
