--- a/myproject/maps/templates/simple-map.html
+++ b/myproject/maps/templates/simple-map.html
@@ -18,8 +18,7 @@
       <div class="col-lg-12 text-center">
         <h3 class="mb-4">Bản đồ vị trí các trạm xe buýt</h3>
       </div>
-      <div class="custom-block bg-white shadow-lg mb-5" style="height:770px">
-        <div id="map"></div>
+      <div id="map" class="custom-block bg-white shadow-lg mb-5" style="height:770px">
       </div>
     </div>
   </div>
