thêm định vị và chỉ đường

--- a/myproject/posts/templates/posts/post_page.html
+++ b/myproject/posts/templates/posts/post_page.html
@@ -52,15 +52,9 @@
         <div id="route-distance">Quãng đường: Đang tính toán...</div>
 
         <!-- Bản đồ hiển thị các trạm xe buýt -->
-        <div
-          class="custom-block custom-block-topics-listing bg-white shadow-lg mb-5"
-        >
-          <div class="row" style="height: 500px">
-            <div id="map"></div>
-          </div>
-        </div>
+        <div id="map" class="custom-block bg-white shadow-lg mb-5" style="height:770px"></div>
 
-        <a href="{% url 'posts:list' %}">Quay lại danh sách bài viết</a>
+        <a href="{% url 'posts:list' %}">Quay lại danh sách</a>
       </div>
     </div>
   </div>
